qrcode actualizada a app mobile a camara trasera

--- a/qrcode.html
+++ b/qrcode.html
@@ -20,8 +20,11 @@
         Instascan.Camera.getCameras().then(cameras => 
         {
             if(cameras.length > 0) {
-                scanner.start(cameras[0]);
-                
+                if(cameras.length >= 2) {
+                    scanner.start(cameras[1]);                    
+                } else {
+                    scanner.start(cameras[0]);
+                }                
             } else {
                 console.error("No existen camaras disponibles");
             }
