--- a/qrcode.html
+++ b/qrcode.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="lib/instascan.min.js" ></script>	
   </head>
   <body>
-    <video id="preview"></video>
+    <video id="preview" width="100%" height="100%"></video>
     <script>
         let scanner = new Instascan.Scanner(
             {
