--- a/qrcode.html
+++ b/qrcode.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>Instascan</title>
-    <script type="text/javascript" src="lib/instascan.min.js" ></script>	
-  </head>
+    <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js" ></script> 
+    <!--<script type="text/javascript" src="lib/instascan.min.js" ></script> -->
+</head>
   <body>
-    <video id="preview" width="100%" height="100%"></video>
+    <video id="preview" width="420" height="480"></video>
     <script>
         let scanner = new Instascan.Scanner(
             {
@@ -13,7 +14,7 @@
             }
         );
         scanner.addListener('scan', function(content) {
-            //alert('Escaneou o conteudo: ' + content);
+            alert('Escaneou o conteudo: ' + content);
             console.log(content);
             //window.open(content, "_blank");
         });
