--- a/qrcode.html
+++ b/qrcode.html
@@ -21,11 +21,11 @@
         Instascan.Camera.getCameras().then(cameras => 
         {
             if(cameras.length > 0) {
-                if(cameras.length >= 2) {
-                    scanner.start(cameras[1]);                    
-                } else {
+                //if(cameras.length >= 2) {
+                //    scanner.start(cameras[1]);                    
+                //} else {
                     scanner.start(cameras[0]);
-                }                
+                //}
             } else {
                 console.error("No existen camaras disponibles");
             }
