qrcode actualizada tamaño del area de video

--- a/qrcode.html
+++ b/qrcode.html
@@ -6,7 +6,10 @@
     <!--<script type="text/javascript" src="lib/instascan.min.js" ></script> -->
 </head>
   <body>
-    <video id="preview" width="420" height="480"></video>
+      <div style="width: 100%;height: auto; text-align: center;">
+          <video id="preview" width="60%"></video>
+      </div>
+
     <script>
         let scanner = new Instascan.Scanner(
             {
